Added profile view page.

--- a/MicroSocialPlatform/Views/Profile/Index.cshtml
+++ b/MicroSocialPlatform/Views/Profile/Index.cshtml
@@ -1,5 +1,7 @@
 
 <div>
-    <p> Show profile here</p>  
+    <p> User Profile</p>  
+    <p> About me : @ViewBag.Profile.AboutMe</p>
+    <p> Gender: @ViewBag.Profile.Gender</p>
     
 </div>
