Added css files

--- a/MicroSocialPlatform/Views/Home/Index.cshtml
+++ b/MicroSocialPlatform/Views/Home/Index.cshtml
@@ -2,8 +2,29 @@
     ViewData["Title"] = "Home Page";
 }
 
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<head>
+    <link rel="stylesheet" href="~/css/HomeIndex.css">
+</head>
+<body>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
+    <p id='head1' class='header'>Awesome social network</p>
+    <p id='head2' class='header'>Just</p>
+    <p id='head3' class='header'>For you</p>
+    <p id='head4' class='header'>simple and awesome all the time</p>
+    <p id='head5' class='header'>Welcome!</p>
+    <a href="/Identity/Account/Login"><button style="top:40vh">Log in / Register</button></a>
+    <button>Continue as visitator</button>
+    <div class="area">
+        <ul class="circles">
+            <li class="light"></li>
+            <li class="light"></li>
+            <li class="light"></li>
+            <li class="light"></li>
+            <li class="light"></li>
+            <li class="light"></li>
+            <li class="light"></li>
+            <li class="light"></li>
+            <li class="light"></li>
+        </ul>
+    </div>
+</body>
