Added error page style

--- a/MicroSocialPlatform/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MicroSocialPlatform/Areas/Identity/Pages/Account/Register.cshtml
@@ -29,7 +29,7 @@
                     <input asp-for="Input.ConfirmPassword" placeholder="ConfirmPassword" autocomplete="new-password" aria-required="true"/>
                     <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                 </div>
-                <div id="lll" class="inputBox">
+                <div id="buttonColor" class="inputBox">
                     <input id="registerSubmit" type="submit" value = "Register">
                 </div>
                 <a class="btns home" asp-page="./Home">Home</a>
