--- a/MicroSocialPlatform/Views/Profile/Index.cshtml
+++ b/MicroSocialPlatform/Views/Profile/Index.cshtml
@@ -1,7 +1,6 @@
-
+@model MicroSocialPlatform.Models.Profile; 
 <div>
-    <p> User Profile</p>  
-    <p> About me : @ViewBag.Profile.AboutMe</p>
-    <p> Gender: @ViewBag.Profile.Gender</p>
-    
+    <p> User Profile</p>
+    <p> About me : @Model.AboutMe</p>
+    <p> Gender: @Model.Gender</p>
 </div>
