Profile editor validation.

--- a/MicroSocialPlatform/Views/Profile/Edit.cshtml
+++ b/MicroSocialPlatform/Views/Profile/Edit.cshtml
@@ -12,6 +12,7 @@
         @Html.Label("AboutMe", "About me")
         <br/>
         @Html.EditorFor(m => m.AboutMe)
+        @Html.ValidationMessageFor(m => m.AboutMe, null)
         <br/>
 
         @Html.Label("Gender", "My gender")
