--- a/MicroSocialPlatform/wwwroot/css/MyError.css
+++ b/MicroSocialPlatform/wwwroot/css/MyError.css
@@ -29,7 +29,7 @@ body {
 }
 
 .error_bg{
-    margin-top: 30px;
+    margin-top: 50px;
     background-image: url('../gif/output-onlinegiftools.gif');
     height: 60vh;
     width: 90vh;
@@ -40,22 +40,25 @@ body {
 
 h1{
     font-size:80px;
-    color:beige;
+    color:bisque;
 }
 .error_bg h1{
     margin-top: -50px;
     font-size:15px;
-    color:beige;
+    color:bisque;
 }
 .error_bg h3{
+    line-height: 60px;
     margin-top: -10px;
     font-size:15px;
-    color:beige;
+    color:bisque;
 }
 
 .link_error{
+    line-height: 100px;
+    text-decoration: none;
     margin-top:-100px!important;
-    color: beige!important;
+    color: bisque!important;
     padding: 10px 10px;
     width: 130px;
     border-radius: 50px;
