--- a/MicroSocialPlatform/wwwroot/css/MenuBar.css
+++ b/MicroSocialPlatform/wwwroot/css/MenuBar.css
@@ -60,7 +60,7 @@ body{
     right: 0;
     width: 30px;
     height: 30px;
-    background: #212121;
+    background: transparent;
     border-radius: 50%;
     box-shadow: 15px 15px 0 #502e63;
 }
@@ -71,7 +71,7 @@ body{
     right: 0;
     width: 30px;
     height: 30px;
-    background: #212121;
+    background: transparent;
     border-radius: 50%;
     box-shadow: 15px -15px 0 #502e63;
 }
