--- a/MicroSocialPlatform/wwwroot/css/MenuBar.css
+++ b/MicroSocialPlatform/wwwroot/css/MenuBar.css
@@ -12,8 +12,7 @@ body{
 }
 
 .navigation{
-
-    position: relative;
+    position: fixed;
     min-height: 100vh;
     margin-left: 0;
     width: 70px;
@@ -22,6 +21,7 @@ body{
     border-left: 10px solid #212121;
     overflow-x: hidden;
     transition: width 1s;
+    z-index: 10;
 }
 .navigation:hover{
 
@@ -85,7 +85,7 @@ body{
 .navigation ul li a .icon ion-icon{
     position: relative;
     font-size: 1.5em;
-    z-index: 1;
+    z-index: 10;
 }
 .navigation ul li a .title{
     position: relative;
