--- a/MicroSocialPlatform/Areas/Identity/Pages/Account/Login.cshtml
+++ b/MicroSocialPlatform/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,6 +2,7 @@
 @model LoginModel
 
 <head>
+    <title>LoginForm</title>
     <link rel="stylesheet" type="text/css" href="/css/Login.css">
 </head>
 
@@ -28,7 +29,7 @@
                 </div>
                 
                 <div id="lll" class="inputBox">
-                    <input id="login-submit" type="submit" value="Login">
+                    <input id="login-submit" type="submit" value="Login" asp-route="home">
                 </div>
 
                 
