--- a/MicroSocialPlatform/Views/Home/Index.cshtml
+++ b/MicroSocialPlatform/Views/Home/Index.cshtml
@@ -1,1 +1,188 @@
-@Html.Partial("MenuBar")
+<!DOCTYPE html>
+
+<html>
+<head>
+    <title>title</title>
+    <link rel="stylesheet" type="text/css" href="~/css/Post.css">
+</head>
+<body>
+
+<section class="main">
+    <div class="post-container">
+        <div class="post">
+            <div class="post-header">
+                <img src="https://cdn.pixabay.com/photo/2015/04/23/21/59/tree-736877__480.jpg" class="user-icon" alt="">
+                <p class="username">user1</p>
+            </div>
+            <div class="post-feed">
+                <div class="post-img-container">
+                    <div class="text-cont">
+                        <p class="text">ashfjvdjhs, vfskhv akfdjbvkjfs Vkfv hdzjlk hbdzkbkzdvfdkhz vfdkvbfdmz</p>
+                    </div>
+                    <img src="https://cdn.pixabay.com/photo/2015/04/23/21/59/tree-736877__480.jpg" alt="">
+
+                </div>
+            </div>
+
+            <div class="post-detail">
+                <div class="detail-intracables">
+                    <ion-icon class="lbut" name="heart-outline"></ion-icon>
+                    <ion-icon class="cbut" name="chatbubble-ellipses"></ion-icon>
+                </div>
+
+                <span class="likes">3.4k</span>
+                <span class="comment-count">300</span>
+
+            </div>
+            <div class="comments hid">
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+
+                <div class="comment-box">
+                    <input type="text" id="comment-input" placeholder="Add a comment">
+                    <button class="add-comment-btn">Post</button>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="post">
+            <div class="post-header">
+                <img src="https://cdn.pixabay.com/photo/2015/04/23/21/59/tree-736877__480.jpg" class="user-icon" alt="">
+                <p class="username">user1</p>
+            </div>
+            <div class="post-feed">
+                <div class="post-img-container">
+                    <div class="text-cont">
+                        <p class="text">ashfjvdjhs, vfskhv akfdjbvkjfs Vkfv hdzjlk hbdzkbkzdvfdkhz vfdkvbfdmz</p>
+                    </div>
+                    <img src="https://cdn.pixabay.com/photo/2015/04/23/21/59/tree-736877__480.jpg" alt="">
+
+                </div>
+            </div>
+
+            <div class="post-detail">
+                <div class="detail-intracables">
+                    <ion-icon class="lbut" name="heart-outline"></ion-icon>
+                    <ion-icon class="cbut" name="chatbubble-ellipses"></ion-icon>
+                </div>
+
+                <span class="likes">3.4k</span>
+                <span class="comment-count">300</span>
+
+            </div>
+            <div class="comments">
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+                <div class="comment">
+                    <p class="username">user2</p>
+                    <p class="post-des">sankjdsvn akjbvkjd abdskbvaks jdvb</p>
+                </div>
+
+                <div class="comment-box">
+                    <input type="text" id="comment-input" placeholder="Add a comment">
+                    <button class="add-comment-btn">Post</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<script>
+        const slideout = document.querySelector('.cbut')
+        const handle = document.querySelector('.comments')
+
+        slideout.onclick = function() {
+            if(handle.is('hid')){
+                handle.classList.remove('hid');
+                handle.classList.add('active');
+            }
+            else{
+                handle.classList.remove('active');
+                handle.classList.add('hid');
+            }
+        }
+    </script>
+</body>
+</html>
