--- a/MicroSocialPlatform/Views/Start/Index.cshtml
+++ b/MicroSocialPlatform/Views/Start/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <head>
-    <link rel="stylesheet" href="~/css/HomeIndex.css">
+    <link rel="stylesheet" href="~/css/StartPage.css">
 </head>
 <body>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
@@ -12,8 +12,8 @@
     <p id='head3' class='header'>For you</p>
     <p id='head4' class='header'>simple and awesome all the time</p>
     <p id='head5' class='header'>Welcome!</p>
-    <a href="/Identity/Account/Login"><button style="top:40vh">Log in / Register</button></a>
-    <button>Continue as visitator</button>
+    <button style="top:40vh"><a href="/Identity/Account/Login">Log in / Register</a></button>
+    <button ><a asp-route = "home">Continue as visitator</a></button>
     <div class="area">
         <ul class="circles">
             <li class="light"></li>
