--- a/MicroSocialPlatform/wwwroot/css/Post.css
+++ b/MicroSocialPlatform/wwwroot/css/Post.css
@@ -96,7 +96,12 @@
     margin-bottom: 10px;
     margin-right: 15px;
 }
-
+.active{
+    visibility: visible;
+}
+.hid{
+    visibility: hidden;
+}
 .comments{
     display: flex;
     flex-direction: column;
