--- a/MicroSocialPlatform/wwwroot/css/ProfileView.css
+++ b/MicroSocialPlatform/wwwroot/css/ProfileView.css
@@ -1,11 +1,4 @@
-﻿*{
-
-}
-body{
-    /*display: flex;*/
-    text-align: center;
-}
-.container{
+﻿.container{
     left: 40%;
     position: fixed;
     justify-content: center;
