--- a/MicroSocialPlatform/Views/Profile/Index.cshtml
+++ b/MicroSocialPlatform/Views/Profile/Index.cshtml
@@ -1,21 +1,11 @@
 @model MicroSocialPlatform.Models.Profile; 
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="~/css/ProfileView.css">
-</head>
-<body>
-    <partial name="MenuBar"/>
-    <div class="container">
-        <div class="info">
-            <p> User Profile</p>
-            <p> About me : @Model.AboutMe</p>
-            <p> Gender: @Model.Gender</p>
-        </div>
+@{
+    Layout = "MyLayout";
+}
+<div class="container">
+    <div class="info">
+        <p> User Profile</p>
+        <p> About me : @Model.AboutMe</p>
+        <p> Gender: @Model.Gender</p>
     </div>
-</body>
-</html>
+</div>
