--- a/MicroSocialPlatform/wwwroot/css/MenuBar.css
+++ b/MicroSocialPlatform/wwwroot/css/MenuBar.css
@@ -1,17 +1,4 @@
-﻿@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
-*{
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family:'Poppins', sans-serif;
-}
-.body{
-    display: flex;
-    min-height: 100vh;
-    background: radial-gradient(#462d57,#0d0d0d);
-}
-
-.navigation{
+﻿.navigation{
     position: fixed;
     min-height: 100vh;
     margin-left: 0;
