Fixed login return url.

--- a/MicroSocialPlatform/Views/Profile/Index.cshtml
+++ b/MicroSocialPlatform/Views/Profile/Index.cshtml
@@ -1,5 +1,6 @@
 @model MicroSocialPlatform.Models.Profile; 
 @{
+    ViewData["Title"] = "Show Profile";
     Layout = "MyLayout";
 }
 <div class="container">
