--- a/MicroSocialPlatform/Areas/Identity/Pages/Account/Login.cshtml
+++ b/MicroSocialPlatform/Areas/Identity/Pages/Account/Login.cshtml
@@ -29,7 +29,7 @@
                 </div>
                 
                 <div id="lll" class="inputBox">
-                    <input id="login-submit" type="submit" value="Login" asp-route="home">
+                    <input id="login-submit" type="submit" value="Login" >
                 </div>
 
                 
