--- a/MicroSocialPlatform/wwwroot/css/Post.css
+++ b/MicroSocialPlatform/wwwroot/css/Post.css
@@ -87,11 +87,14 @@
     height: 30px;
     cursor: pointer;
 }
-.likes{
+.likes,.comment-count,.date{
     color: #212121;
     margin-top: 10px;
     margin-bottom: 10px;
     margin-right: 15px;
+}
+.post-detail:last-child{
+    position: relative;
 }
 .active{
     visibility: visible;
