--- a/MicroSocialPlatform/Areas/Identity/Pages/Account/Login.cshtml
+++ b/MicroSocialPlatform/Areas/Identity/Pages/Account/Login.cshtml
@@ -28,7 +28,7 @@
                     @Html.DisplayNameFor(m => m.Input.RememberMe)
                 </div>
                 
-                <div id="lll" class="inputBox">
+                <div id="input-btn" class="inputBox">
                     <input id="login-submit" type="submit" value="Login" >
                 </div>
 
