--- a/MicroSocialPlatform/wwwroot/css/ProfileView.css
+++ b/MicroSocialPlatform/wwwroot/css/ProfileView.css
@@ -22,6 +22,7 @@
     width: auto;
     align-items: center;
     gap: 10px;
+    justify-content: space-around;
 }
 .user-dp{
     width: 15vh;
@@ -33,7 +34,7 @@
     max-width: 100vh;
     display: flex;
     flex-direction: column;
-   
+    width: -webkit-fill-available;
 }
 .info-container .username{
     width: auto;
@@ -92,12 +93,14 @@
     margin: 0;
     text-transform: capitalize;
     cursor: pointer;
+    font-size: 1rem;
+    font-weight: 400;
     background: #996678;
     box-shadow: inset 10px 10px 10px #79525f,
     15px 25px 10px rgba(138, 89, 118, 0.1),
     15px 20px 20px rgba(151, 95, 147, 0.1),
     inset -10px -10px 15px rgba(255,255,255,0.5);
-    border-radius: 49% ;
+    border-radius: 10px 300px 10px 300px;
 }
 .btn a{
     text-decoration: none;
