Added post view and post edit.

--- a/MicroSocialPlatform/wwwroot/css/PostEditor.css
+++ b/MicroSocialPlatform/wwwroot/css/PostEditor.css
@@ -1,5 +1,15 @@
 
-.new-post{
-    color:white;
-    margin-left:40%;
+.new-post {
+    color: white;
+    margin-left: 40%;
+}
+
+.edit-post {
+    color: white;
+    margin-left: 40%;
+}
+
+.show-post {
+    color: white;
+    margin-left: 40%;
 }
